--- a/cpp/bob/bob.vcxproj
+++ b/cpp/bob/bob.vcxproj
@@ -10,6 +10,15 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bob.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="bob_test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5BDD4959-DAC7-4206-92DB-2D7B01BAA2A5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -79,12 +88,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="bob.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="bob_test.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
